Made fixes to the styling of overflowing tooltip text

--- a/topbar/src/styles/Downloads.module.css
+++ b/topbar/src/styles/Downloads.module.css
@@ -222,7 +222,7 @@
   height: 8px;
 }
 
-.toolTip p {
+.toolTip a {
   font-family: 'Lato', sans-serif;
   font-weight: bold;
   font-size: 0.8125rem;
